# -

./: .dockerignore  .env.asset-admin  .env.e2e  .env.example  .gitattributes  .gitignore  AGENTS.md  DESIGN.md  README.md  THIRD_PARTY_NOTICES.md  asset-admin.html  biome.json  design-qa.md  index.html  manual.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  processor.html  product.html  tsconfig.json  vite.config.ts  vitest.config.ts
.codex/: config.toml  verify-subagent-models.ps1
browser-extension/: README.md  fflate.js  manifest.json  popup.css  popup.html  popup.js  preview-runtime.js  preview.css  preview.html  scan-active-tab.js  site-adapters.js
config/: product-surfaces.json  release-manifest.json
docs/: ASSET_ADMIN_AUTH.md  ASSET_CLOUD_ARCHITECTURE.md  PLATFORM_DEVELOPMENT.md  PRODUCT_ARCHITECTURE.md  PRODUCT_MANUAL.md  PROJECT_TIMELINE.md  RELEASE_SIGNING.md  SUBMISSION_SECURITY.md  open-source-reuse.md
scripts/: build-browser-extension.mjs  build-processing-agent.mjs  check-product-boundaries.mjs  check-production-endpoints.mjs  check-production-licenses.mjs  create-runtime-env.mjs  dedupe-ios-staticlib.mjs  dev-with-assets.ps1  dev-with-assets.sh  finalize-asset-admin-build.mjs  finalize-desktop-app-build.mjs  finalize-ios-app-build.mjs  ios-swift-target.d.mts  ios-swift-target.mjs  prepare-ios-project.mjs  release-manifest.mjs  run-full-pipeline-verification.mjs  swift  verify-browser-extension-pipeline.mjs  verify-browser-extension.mjs  verify-extension-client.mjs  verify-full-pipeline.py  verify-full-pipeline.sh  verify-release-artifacts.mjs  xcode-ios-rust-build.sh
src/: App.tsx  main.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.processor.conf.json  tauri.qingsu.conf.json
src-tauri/capabilities/: default.json  mobile.json  processor.json
src-tauri/icons/processor/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+267 files in other folders)
