[package]
name = "qingshe-desktop"
version = "0.1.0"
description = "Local wedding-planning design editor"
authors = ["轻设"]
license = "UNLICENSED"
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qingshe_desktop_lib"
crate-type = ["staticlib", "rlib"]

[features]
default = []
processor = [
  "dep:tauri-plugin-deep-link",
  "dep:tauri-plugin-shell",
  "dep:tauri-plugin-single-instance",
  "tauri/tray-icon",
]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = { version = "2.3.5", optional = true }
tauri-plugin-deep-link = { version = "2.4.9", optional = true }
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"], optional = true }
serde_json = "1"

[patch.crates-io]
# Xcode 27 beta can trap inside Wry's iOS WebKit bundle-version probe before
# the first window is created. Keep the upstream runtime behavior on other
# platforms while treating Apple's built-in WebKit as present on iOS/macOS.
tauri-runtime-wry = { path = "vendor/tauri-runtime-wry" }
